# vector

./: .clang-format  CMakeLists.txt  README.md
docs/: default
src/: main.cpp  settings.hpp  tests.cpp  vector.hpp
