CMAKE_MINIMUM_REQUIRED(VERSION 3.27)

PROJECT(vector LANGUAGES CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_FLAGS "-std=c++23 -Wpedantic -Wall -Wextra -pedantic -fopenmp -O3")

FILE(GLOB SOURCES
	"src/*.cpp"
)

ADD_SUBDIRECTORY(libs/fmt)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} fmt)
